# fast-api-lms

./: .gitignore  README.md  main.py  pyproject.toml  tasks.py  Диаграмма без названия.drawio
alembic/: env.py
alembic/versions/: 2025_03_30_2315-6a50ed5439b7_create_user_table.py  2025_03_31_0014-8b28d0d0b650_create_access_token_table.py  2025_03_31_1607-35091677c2a9_add_field_is_teacher_and_id_student_to_.py  2025_03_31_1629-e1e277274e7d_init_migration.py  2025_04_01_1415-a5b737e5cd28_init_migration.py
api_v1/: __init__.py  auth.py  course_programs.py  courses.py  groups.py  lessons.py  students.py  teachers.py  users.py
api_v1/dependencies/: fast_api_users_router.py
api_v1/dependencies/authentication/: access_tokens.py  fast_api_users_router.py  user_manager.py
api_v1/users/: crud.py  schemas.py  views.py
client/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useResource.ts  useResourcesSearch.ts
client/src/pages/: Courses.tsx  Groups.tsx  Login.tsx  PageNotFound.tsx  Users.tsx
client/src/schemas/: authSchema.ts  (+10 more)
core/: cli.py  config.py
core/authentication/: transport.py  user_manager.py
core/crud/: base.py  course_programs.py  courses.py  groups.py  lessons.py
core/models/: __init__.py  acces_token.py  base.py  course.py  course_group_association.py  course_program.py  db_helper.py  group.py  lesson.py  lesson_group_association.py  user.py
core/schemas/: course_programs.py  courses.py  groups.py  lessons.py  pagination.py  user.py
(+90 files in other folders)
